# Robot_move

./: .gitignore  PYLANCE-FIX-GUIDE.md  RASPI-TROUBLESHOOTING.md  README-RASPI.md  README.md  diagnose-pylance-issues.py  fix-vscode-pylance-raspi.sh  main.py  pyproject-raspi.toml  pyproject.toml  raspi-debug.sh  requirements-raspi.txt  setup-raspi-alternatives.sh  setup-raspi-uv.sh  tmp_check_model.py
.venv_clean/: pyvenv.cfg
.venv_model/: pyvenv.cfg
.venv_ps/: pyvenv.cfg
apps/: calculate_score.py  collect_data_myrobot.py  track_trajectory.py
data/recorded_trajectory/csv/: reference_trajectory_6.csv  yuma_dynamixel_onecircle_qdes.csv
data/tracked_trajectory/csv/: tracked_trajectory_1_1.csv  tracked_trajectory_2_1.csv  tracked_trajectory_2_2.csv  tracked_trajectory_3_1.csv  tracked_trajectory_3_2.csv  tracked_trajectory_3_3.csv  tracked_trajectory_4_1.csv  tracked_trajectory_4_2.csv  tracked_trajectory_4_3.csv  tracked_trajectory_4_4.csv  tracked_trajectory_5_1.csv  tracked_trajectory_5_2.csv  tracked_trajectory_5_3.csv  tracked_trajectory_5_4.csv  tracked_trajectory_5_5.csv  tracked_trajectory_6_1.csv  tracked_trajectory_6_2.csv  tracked_trajectory_6_3.csv  tracked_trajectory_6_4.csv  tracked_trajectory_6_5.csv  tracked_trajectory_6_6.csv  tracked_trajectory_7_1.csv  tracked_trajectory_7_2.csv  tracked_trajectory_7_3.csv  tracked_trajectory_7_4.csv  tracked_trajectory_7_5.csv  tracked_trajectory_7_6.csv  tracked_trajectory_7_7.csv  tracked_trajectory_8_1.csv  tracked_trajectory_8_2.csv  tracked_trajectory_8_3.csv  tracked_trajectory_8_4.csv  tracked_trajectory_8_5.csv  tracked_trajectory_8_6.csv  tracked_trajectory_8_7.csv  tracked_trajectory_8_8.csv  tracked_trajectory_9_1.csv
desktop/: .gitignore  pyproject.toml
desktop/ESN/apps/: optimize_esn_model.py
desktop/ESN/scripts/: evaluate_trained_model.py  plot_predictions.py
desktop/apps/: ESN_WORKFLOW.md  ESN_control.py  ESN_control_test.py  ESN_eval_plot.py  ESN_track_trajectory.py  ESN_train.py  calculate_score.py  esn_ref_trajectory.py  track_trajectory.py  train_esn_model.py  train_model.py
desktop/apps/config/: model.toml
desktop/data/esn/: esn_weights_reference6.npy  esn_weights_yuma.npy
desktop/data/mlp/: trained_model.joblib
desktop/matlab/: IterSolver.m  culc_inv_kinematics.m  culc_kinematics.m  main.m  param_RC_robot.m
desktop/plots/impulse_res200_pulse_sweep/: metrics_start100_dur10.npz  metrics_start100_dur20.npz  metrics_start100_dur30.npz  metrics_start100_dur5.npz  metrics_start100_dur50.npz  metrics_start125_dur10.npz  metrics_start125_dur20.npz  metrics_start125_dur30.npz  metrics_start125_dur5.npz  metrics_start125_dur50.npz  metrics_start150_dur10.npz  metrics_start150_dur20.npz  metrics_start150_dur30.npz  (+50 more)
desktop/yuma/: dynamixel_onecircle_arm_angletorque.py  dynamixel_onecircle_culc.py  dynamixel_onecircle_culc_delaynew.py  dynamixel_onecircle_predict.py  dynamixel_onecircle_predict_delay.py  model_new.py  plot_generate.py
final/: track_trajectory.py  train_model.py
src/affetto_nn_ctrl/: model_utility.py  raspberry_pi_hardware.py
(+1246 files in other folders)
