[project]
name = "mizukirobot"
version = "0.1.0"
description = "Robot control system with neural network-based controllers for Affetto"
authors = [
    { name = "Yuma", email = "your-email@example.com" },
]
requires-python = ">=3.12.4"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.14.1",
    "scikit-learn>=1.5.2",
    "joblib>=1.4.2",
    "matplotlib>=3.5.0",
    "pandas>=1.5.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "pyplotutil",
    "scienceplots>=2.1.1",
    "pypdf>=5.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "PIE", "T20", "RET", "SIM", "ARG", "PL", "R", "S"]
ignore = ["S101", "PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
pyplotutil = { git = "https://github.com/hrshtst/pyplotutil.git" }
